--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,48 @@
 /* light purple: C5AEA9 */
 /* dark brown: #664b3d; */
 /* green: 8EA366 */
+/* Light peachy/pink: F29569 */
+/* yellow: F6EA64 */
+/* orange: EEA148 */
 
-.hero-image {
-  background: url(./media/pictures/51d4bd026badfe7d52d5fe25a37841f9.jpeg);
+.hero-background {
+  background: #f29569;
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
-  background-position: center;
+  background-position: right;
+}
+
+.hero-text {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.container {
+  display: flex;
+  flex: row;
 }
 
 .name {
   padding: 10px;
 }
 
+.hero-image {
+  height: 600px;
+  width: auto;
+}
+
 @media (min-width: 600px) {
   .hero-text {
+    background-color: rgba(0, 0, 139, 0.7);
+    margin-top: 200px;
+    margin-left: 25px;
+    border-radius: 5px;
+    padding: 10px 150px 10px 10px;
     font-weight: bold;
     position: absolute;
-    border-radius: 20px;
     color: #8ea366;
-    font-size: 100px;
-    margin: 250px;
-    border: 5px dashed #c5aea9;
+    font-size: 75px;
     text-align: center;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -32,13 +50,13 @@
   .hero-text {
     font-weight: bold;
     position: absolute;
-    border-radius: 20px;
-    color: #8ea366;
+    color: darkblue;
     font-size: 100px;
     margin: 250px;
-    border: 5px solid #c5aea9;
     text-align: center;
     transform: translate(-50%, -50%);
-    background-color: #664b3d;
+    background-color: #eea148;
+    padding: 50px 20px;
+    border-radius: 30px 10px;
   }
 }
