--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,42 @@
 /* yellow: F6EA64 */
 /* orange: EEA148 */
 /* light purple: A3849B */
+/* light blue C4C8D4 */
+/* brown nav 6B544C */
+/* mauve 6B544C */
 
-.body {
-  margin: 00;
+#container {
+  background-color: #c4c8d4;
 }
+
+nav {
+  font-family: monospace;
+  padding: 00;
+}
+a.navbar-brand {
+  color: thistle;
+}
+
+nav a:hover {
+  background-color: #664b3d;
+}
+
+#target {
+  background-color: #6b544c;
+  height: auto;
+  padding: 10px;
+  color: thistle;
+}
+#cont {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .hero {
   height: 600px;
 }
 .hero-background {
-  background: #f29569;
+  background: #a36d58;
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
@@ -23,6 +50,16 @@
 .hero-text {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgba(207, 172, 168, 0.3);
+  margin-top: 325px;
+  margin-left: 50px;
+  border-radius: 5px;
+  padding: 10px 150px 10px 10px;
+  font-weight: bold;
+  position: absolute;
+  color: #331618;
+  font-size: 75px;
+  text-align: center;
 }
 .container {
   display: flex;
@@ -36,36 +73,7 @@
 .hero-image {
   height: 600px;
   width: auto;
-}
-
-@media (min-width: 600px) {
-  .hero-text {
-    background-color: rgba(0, 0, 139, 0.7);
-    margin-top: 200px;
-    margin-left: 25px;
-    border-radius: 5px;
-    padding: 10px 150px 10px 10px;
-    font-weight: bold;
-    position: absolute;
-    color: #8ea366;
-    font-size: 75px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 600px) {
-  .hero-text {
-    font-weight: bold;
-    position: absolute;
-    color: darkblue;
-    font-size: 100px;
-    margin: 250px;
-    text-align: center;
-    transform: translate(-50%, -50%);
-    background-color: #eea148;
-    padding: 50px 20px;
-    border-radius: 30px 10px;
-  }
+  margin-left: 150px;
 }
 
 .w-header {
