styling the programming section

--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,11 @@ nav {
 }
 
 nav a:hover {
-  background-color: #664b3d;
+  background-color: #a7714e;
 }
 
 #target {
-  background-color: #6b544c;
+  background-color: #b57f5b;
   height: auto;
   padding: 10px;
 }
