finished styling the stl caps page

--- a/hs-styles.css
+++ b/hs-styles.css
@@ -63,11 +63,11 @@ nav {
 }
 
 nav a:hover {
-  background-color: #a7714e;
+  background-color: #6f4c40;
 }
 
 #target {
-  background-color: #b57f5b;
+  background-color: #8d7269;
   height: auto;
   padding: 10px;
 }
