--- a/p-styles.css
+++ b/p-styles.css
@@ -10,16 +10,16 @@ nav {
   padding: 2px;
 }
 
-nav a:hover {
-  background-color: #a7714e;
-}
-
 h1 {
   color: #f29569;
 }
 
+nav a:hover {
+  background-color: #6f4c40;
+}
+
 #target {
-  background-color: #b57f5b;
+  background-color: #8d7269;
   height: auto;
   padding: 10px;
 }
