added a footer with my socials

--- a/p-styles.css
+++ b/p-styles.css
@@ -117,3 +117,39 @@ nav a:hover {
   padding: 15px;
   margin-top: 70px;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa-instagram,
+.fa-facebook,
+.fa-twitter {
+  color: white;
+}
+
+.fa-instagram:hover,
+.fa-facebook:hover,
+.fa-twitter:hover {
+  color: #f29569;
+}
+.socials {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-evenly;
+  justify-content: center;
+  align-content: center;
+  padding: 15px;
+}
+
+.instagram,
+.twitter,
+.facebook {
+  font-size: 50px;
+  padding: 20px;
+}
