--- a/hs-styles.css
+++ b/hs-styles.css
@@ -218,3 +218,38 @@ h2 {
   color: #531927;
   background-color: rgba(83, 25, 39, 0.4);
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa-instagram,
+.fa-facebook,
+.fa-twitter {
+  color: white;
+}
+
+.fa-instagram:hover,
+.fa-facebook:hover,
+.fa-twitter:hover {
+  color: #6b544c;
+}
+.socials {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-evenly;
+  justify-content: center;
+  align-content: center;
+  padding: 15px;
+}
+
+.instagram,
+.twitter,
+.facebook {
+  font-size: 50px;
+  padding: 20px;
+}
