--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,39 @@ nav a:hover {
   justify-content: center;
   align-content: center;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa-instagram,
+.fa-facebook,
+.fa-twitter {
+  color: white;
+}
+
+.fa-instagram:hover,
+.fa-facebook:hover,
+.fa-twitter:hover {
+  color: #6b544c;
+}
+.socials {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-evenly;
+  justify-content: center;
+  align-content: center;
+  padding: 15px;
+}
+
+.instagram,
+.twitter,
+.facebook {
+  font-size: 50px;
+  padding: 20px;
+}
